Fix dark mode

--- a/public/css/dark.scss
+++ b/public/css/dark.scss
@@ -88,6 +88,15 @@ $text-muted: $gray-400;
 		color: $black !important;
 	}
 }
+.bg-success {
+	background-color: darken($green, 20) !important;
+
+	&:hover,
+	&:active,
+	&:focus {
+		background-color: darken($green, 25) !important;
+	}
+}
 
 .btn-secondary {
 	color: $white;
@@ -122,13 +131,6 @@ $text-muted: $gray-400;
 
 a.play-button {
 	color: $black !important;
-	background-color: darken($green, 20) !important;
-
-	&:hover,
-	&:active,
-	&:focus {
-		background-color: darken($green, 25) !important;
-	}
 }
 
 .notification,
